[gd_scene load_steps=2 format=3 uid="uid://dx83acudi7y1e"]

[ext_resource type="Script" uid="uid://do3h6etvor7fi" path="res://menu.gd" id="1_lti8b"]

[node name="Menu" type="Node2D"]
script = ExtResource("1_lti8b")

[node name="MarginContainer" type="MarginContainer" parent="."]
offset_left = 390.0
offset_top = 72.0
offset_right = 797.0
offset_bottom = 177.0

[node name="ResumeButton" type="Button" parent="MarginContainer"]
layout_mode = 2
text = "Resume"

[node name="MarginContainer2" type="MarginContainer" parent="."]
offset_left = 390.0
offset_top = 188.0
offset_right = 797.0
offset_bottom = 293.0

[node name="SaveButton" type="Button" parent="MarginContainer2"]
layout_mode = 2
text = "Save
"

[node name="MarginContainer3" type="MarginContainer" parent="."]
offset_left = 390.0
offset_top = 302.0
offset_right = 797.0
offset_bottom = 407.0

[node name="LoadButton" type="Button" parent="MarginContainer3"]
layout_mode = 2
text = "Load Last Save
"

[node name="MarginContainer4" type="MarginContainer" parent="."]
offset_left = 390.0
offset_top = 418.0
offset_right = 797.0
offset_bottom = 523.0

[node name="ExitButton" type="Button" parent="MarginContainer4"]
layout_mode = 2
text = "Exit"

[connection signal="pressed" from="MarginContainer/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="MarginContainer2/SaveButton" to="." method="_on_save_button_pressed"]
[connection signal="pressed" from="MarginContainer3/LoadButton" to="." method="_on_load_button_pressed"]
[connection signal="pressed" from="MarginContainer4/ExitButton" to="." method="_on_exit_button_pressed"]
